# PyTorchTextOverlayDataset

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
examples/: train_clip.py  train_resnet_trigrams.py  train_vit_ocr.py  train_vit_trigrams.py
scripts/: dev_build.sh  prod_build.sh
src/: __init__.py
src/TextOverlayDataset/: __init__.py  bounding_box_tools.py  text_image_dataset.py  text_overlay_dataset.py
src/text_overlay_dataset/: bounding_box_tools.py  font_tools.py  text_overlay_dataset.py  word_wrap.py
tests/: test_bounding_box_tools.py  test_text_overlay_dataset.py
