[project]
name = "text-overlay-dataset"
version = "0.0.8"
authors = [
  { name="Joseph Catrambone", email="me@josephcatrambone.com" },
]
description = "A dataset iterator for PyTorch to combine and overlay text on an image dataset."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JosephCatrambone/PyTorchTextOverlayDataset"
"Bug Tracker" = "https://github.com/JosephCatrambone/PyTorchTextOverlayDataset/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"